crates/reinhardt-core/crates/macros/tests/ui/routes/fail/invalid_type_spec.rs
use reinhardt_macros::delete;

#[delete("/posts/{<invalid:post_id>}")]
async fn delete_post() -> Result<(), ()> {
    Ok(())
}

fn main() {}
